argocd-hello-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-hello
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "0"
