argocd-hello-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: versioned-hello
  name: versioned-hello
  namespace: argocd-hello
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: versioned-hello
  template:
    metadata:
      labels:
        app: versioned-hello
    spec:
      containers:
      - image: quay.io/alpaslank/versioned-hello:v1.0
        name: versioned-hello
