argocd-hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: versioned-hello
  name: versioned-hello
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: versioned-hello
  type: ClusterIP
