argocd-hello-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: versioned-hello
  name: versioned-hello
  namespace: argocd-hello
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "3"
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: versioned-hello
    weight: null
